test fix for div overflow when nav bar visible on mobile

--- a/index.css
+++ b/index.css
@@ -227,7 +227,7 @@ html, body {
     position: absolute;
     top: 0%;
     max-width: 100vw;
-    max-height: 100vh;
+    max-height: 100svh;
     transition: top 1s cubic-bezier(0.5, 0, 0.5, 1);
 }
 
@@ -259,7 +259,7 @@ html, body {
     flex-direction: column;
     gap: 1.5vmin;
     align-items: center;
-    height: 95vh;
+    height: 95svh;
     margin-top: 2.5vh;
     margin-bottom: 5vh;
     border-radius: 2% 2% 0% 2%;
@@ -376,8 +376,8 @@ html, body {
     margin: auto;
     display: flex;
     flex-direction: column;
-    max-height: 95vh;
-    min-height: 95vh;
+    max-height: 95svh;
+    min-height: 95svh;
     margin-top: 5vh;
     margin-bottom: 2.5vh;
     border-radius: 2% 2% 0 2%;
